--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Rocky Mountain National Park (Colo.)'
 - !lcc 'F721'
+- GITenberg
 title: Rocky Mountain National Park [Colorado]
 url: http://www.gutenberg.org/ebooks/37918
